     changes in C, bringing the Python and C implementations back in
     sync.  See lib/python/AccessControl/ZopeSecurityPolicy.py.

   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8

  after Zope 2.8.1 b1 

    Bugs Fixed

      - Zope2.Startup.zopectl: fork before execv when running unit tests
        (don't exit the shell, if run from there).

      - TAL: MassageIDs are now handled the same way as in zope.tal.

      - DocumentTemplate: ustr no longer mangles MassageIDs.
        Custom string types are now returned unchanged.

      -  As developed in a long thread starting at
         http://mail.zope.org/pipermail/zope/2005-July/160433.html
         there appears to be a race bug in the Microsoft Windows socket
         implementation, rarely visible in ZEO and/or in
         ZServer/medusa/thread/select_trigger.py when multiple processes try
         to create an "asyncore trigger" simultaneously, most often (in
         stress tests) manifesting as a hung process.  Windows-specific
         trigger code in both changed to work around this bug when it occurs.

      - Collector #1807: fixed memory leak in cAccessControl.guarded_getattr()


  Zope 2.8.1 b1 (2005/07/28)

    Features Added

      - PluginIndexes, ZCTextIndex and ZCatalog: Added some z3 interfaces.

      - Verbose security exception reporting has been folded into Zope,
        removing the need for the VerboseSecurity product.  See the
        documentation for the "verbose-security" option in zope.conf.

      - "TemporaryStorage" (the storage that is used mainly to back the
        default sessioning database) is now MVCC capable, which essentially
        means that its usage will no longer generate ZODB ReadConflictErrors.

    Bugs Fixed

      - Collector #1852: fixed wrong URL construction in webdav.davcmds
